src/objects/GDS__c.object
<CustomObject>
    <fields>
        <fullName>AIMS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AIMS ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Computer_Reservation_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Computer Reservation System</label>
        <referenceTo>GDP_Reference_Table__c</referenceTo>
        <relationshipLabel>GDSs</relationshipLabel>
        <relationshipName>GDSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GDS_ID__c</fullName>
        <label>GDS ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GDSs</relationshipLabel>
        <relationshipName>GDSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_GDP_Products_Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related GDP Products Account View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>GDSs</relationshipLabel>
        <relationshipName>GDSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WebStar_ID__c</fullName>
        <externalId>true</externalId>
        <label>WebStar ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GDS</label>
    <nameField>
        <displayFormat>GDS-{00000}</displayFormat>
        <label>GDS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDSs</pluralLabel>
    <recordTypes>
        <fullName>GDP</fullName>
        <active>true</active>
        <label>GDP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>